<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/alunosFragment">

    <fragment
        android:id="@+id/alunosFragment"
        android:name="br.com.deyvidfernandes.androidsharedpreferences.fragment.AlunosFragment"
        android:label="@string/alunos"
        tools:layout="@layout/fragment_alunos" >
       </fragment>

    <fragment
        android:id="@+id/formAlunoFragment"
        android:name="br.com.deyvidfernandes.androidsharedpreferences.fragment.FormAlunoFragment"
        android:label="@string/cadastro"
        tools:layout="@layout/fragment_form_aluno" />

    <fragment
        android:id="@+id/perfilFragment"
        android:name="br.com.deyvidfernandes.androidsharedpreferences.fragment.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>